chore: setup .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST = localhost
-DATABASE = nama_db
-USERNAME = test
-PASSWORD = test
+DB_HOST = localhost
+DB_DATABASE = digital_printing
+DB_USERNAME = root
+DB_PASSWORD = root
