feat: init pass verify

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DB_HOST = localhost
 DB_DATABASE = digital_printing
 DB_USERNAME = root
 DB_PASSWORD = root
+EMAIL = krisnayatisomba02@gmail.com
+SMTP_PASSWORD = ixnx cybi jdui ffms
